--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,79 @@
+/* Remove browser defaults */
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+ 
+/* Style App.js wrapper */
 .App {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+ 
+/* Tab Container */
+.Tabs {
+  width: 100%;
+  height: 100vh;
+  min-height: 400px;
+  background: #053742;
+  color: #E8F0F2;
+  @media (max-width: 769px) {
+    padding: 2rem 0;
+  }
+}
+ 
+/* Tab Navigation */
+ul.nav {
+  width: 20%;
+  margin-bottom: 50px;
+  display: flex;
+  align-items: start;
+  justify-content: space-between;
+  border: 1px solid #39A2DB;
+  
+  padding-left: 0px;
+}
+ 
+ul.nav li {
+  width: 50%;
+  
+  list-style: none;
+  text-align: center;
+  cursor: pointer;
+  transition: all 0.7s;
+}
+ 
+ul.nav li:first-child {
+  
+}
+ 
+ul.nav li:last-child {
+  
+}
+ 
+ul.nav li:hover {
+  background: rgba(50, 224, 196, 0.15);
+}
+ 
+ul.nav li.active {
+  background: #39A2DB;
+}
+ 
+/* Tab Content Styles */
+.TabContent {
+  font-size: 2rem;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.outlet {
+  height: 80vh;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.reportClass {
+  height: 85vh;
 }
